# intltool-git-mirror

./: HACKING  Makefile.in.in  autogen.sh
doc-i18n-tool/: Makefile.am  doc-i18n-tool.c
modules/: Makefile.am
modules/XML/Parser/Style/: OrigTree.pm
tests/cases/: extract11.xml
tests/results/: extract11.xml.h  test.scm.h.THIS
